--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -128,16 +128,39 @@ functions:
       - { Ref: TuCertsLambdaLayer }
     events:
       - schedule: cron(0 16 * * ? *)
+
+  # Update credit scores and reports flow
   creditScoreUpdatesService:
     handler: src/handlers/transunion/creditScoreUpdatesService.main
-    timeout: 900
+    timeout: 720
     layers:
       - { Ref: TuCertsLambdaLayer }
     events:
       - schedule: cron(0 14 18 * ? *)
-  creditScoreUpdatesWorker:
-    handler: src/handlers/transunion/creditScoreUpdatesWorker.main
-    timeout: 900
+  creditScoreUpdatesManual:
+    handler: src/handlers/transunion/creditScoreUpdatesManual.main
+    timeout: 720
+    layers:
+      - { Ref: TuCertsLambdaLayer }
+
+  # Cancel enrollment flow
+  cancelEnrollmentManual:
+    handler: src/handlers/transunion/cancelEnrollmentManual.main
+    timeout: 720
+    layers:
+      - { Ref: TuCertsLambdaLayer }
+
+  # clean up open disputes
+  cleanUpOpenDisputes:
+    handler: src/handlers/transunion/cleanUpOpenDisputes.main
+    timeout: 720
+    layers:
+      - { Ref: TuCertsLambdaLayer }
+
+  # generic batch updates worker
+  batchUpdatesWorker:
+    handler: src/handlers/transunion/batchUpdatesWorker.main
+    timeout: 720
     reservedConcurrency: 5
     layers:
       - { Ref: TuCertsLambdaLayer }
@@ -146,7 +169,7 @@ functions:
           arn: !GetAtt
             - TransunionQueue
             - Arn
-          batchSize: 100
+          batchSize: 1
           maximumBatchingWindow: 5
   triggerCreateCreditScoreTracking:
     handler: src/triggers/triggerCreateCreditScoreTracking.main
@@ -434,6 +457,7 @@ resources:
       Type: 'AWS::SQS::Queue'
       Properties:
         QueueName: ${self:provider.stage}-${self:service}-sqs
+        DelaySeconds: 3
         ReceiveMessageWaitTimeSeconds: 20
         RedrivePolicy:
           deadLetterTargetArn: !GetAtt
@@ -481,6 +505,8 @@ resources:
         FilterPolicy:
           service:
             - transunionbatch
+            - creditscoreupdates
+            - cancelenrollment
         RawMessageDelivery: 'true'
 
   Outputs:
