--- a/agency-services-transunion/package.json
+++ b/agency-services-transunion/package.json
@@ -25,6 +25,7 @@
     "aws-appsync": "^4.0.3",
     "aws4": "^1.11.0",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.7",
     "es6-promise": "^4.2.8",
     "fast-xml-parser": "^3.19.0",
     "he": "^1.2.0",
