--- a/credit-report-services/resources/serverless.yml
+++ b/credit-report-services/resources/serverless.yml
@@ -49,6 +49,13 @@ resources:
         StreamSpecification:
           StreamViewType: NEW_AND_OLD_IMAGES
 
+    ApiGatewayRestApi:
+      Type: AWS::ApiGateway::RestApi
+      Properties:
+        Name: 'Credit reports service api'
+        Tags:
+          - 'CreditReports'
+
     ApiGatewayAuthorizer:
       Type: AWS::ApiGateway::Authorizer
       Properties:
@@ -60,6 +67,76 @@ resources:
         ProviderARNs:
           - !Sub 'arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/${self:custom.settings.POOL_IDS.${opt:stage}}'
 
+    # CreditReportsSNSTopic:
+    #   Type: AWS::SNS::Topic
+    #   Properties:
+    #     TopicName: ${self:provider.stage}-credit-reports-topic
+
+    # # Create our 'MailchimpQueue' Dead Letter Queue SQS queue
+    # CreditReportsQueueDLQ:
+    #   Type: AWS::SQS::Queue
+    #   Properties:
+    #     QueueName: ${self:provider.stage}-credit-reports-dlq
+    #     ReceiveMessageWaitTimeSeconds: 20
+
+    # # Create our 'MailchimpQueue' SQS queue
+    # CreditReportsQueue:
+    #   Type: 'AWS::SQS::Queue'
+    #   Properties:
+    #     QueueName: ${self:provider.stage}-credit-reports-sqs
+    #     ReceiveMessageWaitTimeSeconds: 20
+    #     RedrivePolicy:
+    #       deadLetterTargetArn: !GetAtt
+    #         - CreditReportsQueueDLQ
+    #         - Arn
+    #       maxReceiveCount: 3
+    #     VisibilityTimeout: 720
+
+    # # Create our queue policy for the 'MailchimpQueue'
+    # SnsToCreditReportsQueueSqsPolicy:
+    #   Type: AWS::SQS::QueuePolicy
+    #   Properties:
+    #     PolicyDocument:
+    #       Version: '2012-10-17'
+    #       Statement:
+    #         - Sid: 'allow-sns-messages'
+    #           Effect: Allow
+    #           Principal: '*'
+    #           Resource: !GetAtt
+    #             - CreditReportsQueue
+    #             - Arn
+    #           Action: 'SQS:SendMessage'
+    #           Condition:
+    #             ArnEquals:
+    #               'aws:SourceArn': ${self:provider.environment.OPSBATCH_SNS_ARN}
+    #     Queues:
+    #       - Ref: CreditReportsQueue
+
+    # # Create the subscription to the 'queue
+    # CreditReportsQueueSubscription:
+    #   Type: 'AWS::SNS::Subscription'
+    #   Properties:
+    #     TopicArn: ${self:provider.environment.OPSBATCH_SNS_ARN}
+    #     Endpoint: !GetAtt
+    #       - CreditReportsQueue
+    #       - Arn
+    #     Protocol: sqs
+    #     FilterPolicy:
+    #       service:
+    #         - opsbatch
+    #         - enrollmentreport
+    #         - failurereport
+    #         - actionsreport
+    #         - disputeenrollmentreport
+    #         - authenticationcalls
+    #         - failedfulfillreport
+    #         - referralsreport
+    #         - monthlyloginreport
+    #         - registeredusersreport
+    #         - useremployerall
+    #         - usermetricsreport
+    #     RawMessageDelivery: 'true'
+
   Outputs:
     CreditReportsTable:
       Description: 'Credit reports table'
@@ -70,6 +147,16 @@ resources:
       Value: { 'Fn::GetAtt': ['CrediReports', 'StreamArn'] }
       Export:
         Name: !Sub '${self:service}-credit-reports-stream'
+    ApiGatewayRestApiId:
+      Description: 'Credit reports API id'
+      Value: !Ref ApiGatewayRestApi
+      Export:
+        Name: !Sub '${self:service}-credit-reports-apigw-id'
+    ApiGatewayRestApiResourceId:
+      Description: 'Credit reports API root resource'
+      Value: !GetAtt ApiGatewayRestApi.RootResourceId
+      Export:
+        Name: !Sub '${self:service}-credit-reports-apigw-rootresource'
     ApiGatewayAuthorizorId:
       Description: 'Credit reports API gateway authorizer'
       Value: !Ref ApiGatewayAuthorizer
