--- a/credit-report-services/resources/serverless.yml
+++ b/credit-report-services/resources/serverless.yml
@@ -65,75 +65,64 @@ resources:
         ProviderARNs:
           - !Sub 'arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/${self:custom.settings.POOL_IDS.${opt:stage}}'
 
-    # CreditReportsSNSTopic:
-    #   Type: AWS::SNS::Topic
-    #   Properties:
-    #     TopicName: ${self:provider.stage}-credit-reports-topic
+    CreditReportsSNSTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        TopicName: ${self:provider.stage}-credit-reports-topic
 
-    # # Create our 'MailchimpQueue' Dead Letter Queue SQS queue
-    # CreditReportsQueueDLQ:
-    #   Type: AWS::SQS::Queue
-    #   Properties:
-    #     QueueName: ${self:provider.stage}-credit-reports-dlq
-    #     ReceiveMessageWaitTimeSeconds: 20
+    # Create our 'MailchimpQueue' Dead Letter Queue SQS queue
+    CreditReportsQueueDLQ:
+      Type: AWS::SQS::Queue
+      Properties:
+        QueueName: ${self:provider.stage}-credit-reports-dlq
+        ReceiveMessageWaitTimeSeconds: 20
 
-    # # Create our 'MailchimpQueue' SQS queue
-    # CreditReportsQueue:
-    #   Type: 'AWS::SQS::Queue'
-    #   Properties:
-    #     QueueName: ${self:provider.stage}-credit-reports-sqs
-    #     ReceiveMessageWaitTimeSeconds: 20
-    #     RedrivePolicy:
-    #       deadLetterTargetArn: !GetAtt
-    #         - CreditReportsQueueDLQ
-    #         - Arn
-    #       maxReceiveCount: 3
-    #     VisibilityTimeout: 720
+    # Create our 'MailchimpQueue' SQS queue
+    CreditReportsQueue:
+      Type: 'AWS::SQS::Queue'
+      Properties:
+        QueueName: ${self:provider.stage}-credit-reports-sqs
+        ReceiveMessageWaitTimeSeconds: 20
+        RedrivePolicy:
+          deadLetterTargetArn: !GetAtt
+            - CreditReportsQueueDLQ
+            - Arn
+          maxReceiveCount: 3
+        VisibilityTimeout: 720
 
-    # # Create our queue policy for the 'MailchimpQueue'
-    # SnsToCreditReportsQueueSqsPolicy:
-    #   Type: AWS::SQS::QueuePolicy
-    #   Properties:
-    #     PolicyDocument:
-    #       Version: '2012-10-17'
-    #       Statement:
-    #         - Sid: 'allow-sns-messages'
-    #           Effect: Allow
-    #           Principal: '*'
-    #           Resource: !GetAtt
-    #             - CreditReportsQueue
-    #             - Arn
-    #           Action: 'SQS:SendMessage'
-    #           Condition:
-    #             ArnEquals:
-    #               'aws:SourceArn': ${self:provider.environment.OPSBATCH_SNS_ARN}
-    #     Queues:
-    #       - Ref: CreditReportsQueue
+    # Create our queue policy for the 'MailchimpQueue'
+    SnsToCreditReportsQueueSqsPolicy:
+      Type: AWS::SQS::QueuePolicy
+      Properties:
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Sid: 'allow-sns-messages'
+              Effect: Allow
+              Principal: '*'
+              Resource: !GetAtt
+                - CreditReportsQueue
+                - Arn
+              Action: 'SQS:SendMessage'
+              Condition:
+                ArnEquals:
+                  'aws:SourceArn': !Ref CreditReportsSNSTopic
+        Queues:
+          - Ref: CreditReportsQueue
 
-    # # Create the subscription to the 'queue
-    # CreditReportsQueueSubscription:
-    #   Type: 'AWS::SNS::Subscription'
-    #   Properties:
-    #     TopicArn: ${self:provider.environment.OPSBATCH_SNS_ARN}
-    #     Endpoint: !GetAtt
-    #       - CreditReportsQueue
-    #       - Arn
-    #     Protocol: sqs
-    #     FilterPolicy:
-    #       service:
-    #         - opsbatch
-    #         - enrollmentreport
-    #         - failurereport
-    #         - actionsreport
-    #         - disputeenrollmentreport
-    #         - authenticationcalls
-    #         - failedfulfillreport
-    #         - referralsreport
-    #         - monthlyloginreport
-    #         - registeredusersreport
-    #         - useremployerall
-    #         - usermetricsreport
-    #     RawMessageDelivery: 'true'
+    # Create the subscription to the 'queue
+    CreditReportsQueueSubscription:
+      Type: 'AWS::SNS::Subscription'
+      Properties:
+        TopicArn: !Ref CreditReportsSNSTopic
+        Endpoint: !GetAtt
+          - CreditReportsQueue
+          - Arn
+        Protocol: sqs
+        FilterPolicy:
+          service:
+            - creditreports
+        RawMessageDelivery: 'true'
 
   Outputs:
     CreditReportsTable:
@@ -160,3 +149,8 @@ resources:
       Value: !Ref ApiGatewayAuthorizer
       Export:
         Name: !Sub '${self:service}-credit-reports-authorizer'
+    CreditReportsQueueArn:
+      Description: 'Credit reports queue ARN'
+      Value: !GetAtt CreditReportsQueue.Arn
+      Export:
+        Name: !Sub '${self:service}-sqs-arn'
