--- a/credit-report-services/resources/serverless.yml
+++ b/credit-report-services/resources/serverless.yml
@@ -28,12 +28,11 @@ provider:
   region: ${opt:region, 'us-east-2'}
   environment:
     OUR_ENV: ${self:provider.stage}
+    SECURITY_GROUPS: !ImportValue agency-services-transunion-vpc-natsecuritygroup
+    SUBNETS: !ImportValue agency-services-transunion-subnets-private
   vpc:
-    securityGroupIds:
-      - !GetAtt NatGatewayLambdaSecurityGroup.GroupId
-    subnetIds:
-      - !Ref SubnetAPrivate
-      - !Ref SubnetBPrivate
+    securityGroupIds: !Split: [',', '${self:provider.environment.SECURITY_GROUPS}']
+    subnetIds: !Split: [',', '${self:provider.environment.SUBNETS}']
 
 resources:
   Resources:
