--- a/credit-report-services/api/tsconfig.json
+++ b/credit-report-services/api/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "baseUrl": ".",
     "target": "es6",
     "sourceMap": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "types": ["reflect-metadata", "node", "jest"]
   }
 }
