--- a/credit-report-services/api/tsconfig.json
+++ b/credit-report-services/api/tsconfig.json
@@ -3,6 +3,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "baseUrl": ".",
+    "outDir": "dist",
     "target": "es6",
     "sourceMap": true,
     "moduleResolution": "node",
