adding test endpoint

--- a/credit-report-services/api/package.json
+++ b/credit-report-services/api/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
     "@types/jest": "^26.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
     "serverless-bundle": "3.2.1",
     "serverless-dotenv-plugin": "^3.0.0",
     "serverless-offline": "^6.8.0"
