--- a/credit-report-services/api/serverless.yml
+++ b/credit-report-services/api/serverless.yml
@@ -23,6 +23,7 @@ provider:
     OUR_ENV: ${self:provider.stage}
     SECURITY_GROUPS: !ImportValue agency-services-transunion-vpc-natsecuritygroup
     SUBNETS: !ImportValue agency-services-transunion-subnets-private
+    CREDITREPORT_SQS_ARN: !ImportValue credit-report-service-resources-sqs-arn
   vpc:
     securityGroupIds: { 'Fn::Split': [',', { 'Fn::ImportValue': 'agency-services-transunion-vpc-natsecuritygroup' }] }
     subnetIds: { 'Fn::Split': [',', { 'Fn::ImportValue': 'agency-services-transunion-subnets-private' }] }
@@ -49,6 +50,6 @@ functions:
     onError: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:lambdadeadletterqueue'
     events:
       - sqs:
-          arn: !ImportValue credit-report-service-resources-sqs-arn
+          arn: !Sub '${self:provider.environment.CREDITREPORT_SQS_ARN}'
           batchSize: 1
           maximumBatchingWindow: 5
