testing deployment for source of error

--- a/credit-report-services/api/serverless.yml
+++ b/credit-report-services/api/serverless.yml
@@ -49,14 +49,14 @@ functions:
           authorizer:
             type: COGNITO_USER_POOLS
             authorizerId:
-              Ref: !ImportValue credit-report-services-credit-reports-authorizer
+              Ref: !ImportValue 'credit-report-services-credit-reports-authorizer'
 
-  createCreditReport:
-    handler: src/subs/creditreports/create.main
-    onError: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:lambdadeadletterqueue'
-    events:
-      - sqs:
-          arn:
-            Fn::ImportValue: 'credit-report-service-resources-sqs-arn'
-          batchSize: 1
-          maximumBatchingWindow: 5
+  # createCreditReport:
+  #   handler: src/subs/creditreports/create.main
+  #   onError: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:lambdadeadletterqueue'
+  #   events:
+  #     - sqs:
+  #         arn:
+  #           Fn::ImportValue: 'credit-report-service-resources-sqs-arn'
+  #         batchSize: 1
+  #         maximumBatchingWindow: 5
