--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -65,6 +65,7 @@ provider:
     APPSYNC_ENDPOINT: '${self:custom.settings.GRAPHQL_ENDPOINT.${opt:stage}}'
     APPSYNC_API: '${self:custom.settings.GRAPHQL_API.${opt:stage}}'
     TU_SNS_PROXY_ARN: !Ref TransunionSNSTopic
+    CREDITREPORTS_SNS_PROXY_ARN: !ImportValue credit-report-service-resources-sns-arn
     APPTABLE: ${self:custom.settings.APPTABLES.${opt:stage}}
   vpc:
     securityGroupIds:
