--- a/agency-services-transunion/package.json
+++ b/agency-services-transunion/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
     "@types/jest": "^26.0.24",
-    "serverless-bundle": "3.2.1",
+    "serverless-bundle": "^5.3.0",
     "serverless-dotenv-plugin": "^3.12.2",
     "serverless-offline": "^6.9.0"
   },
