--- a/initiative-program-services/api/serverless.yml
+++ b/initiative-program-services/api/serverless.yml
@@ -1,7 +1,7 @@
 # NOTE: update this with your service name
-service: initiative-program-api
+service: api
 
-# Create an optimized package for our functions
+# Create an optimized package for our functions 
 package:
   individually: true
 
@@ -13,10 +13,20 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: ${opt:stage, 'dev'}
-  region: ${opt:region, 'us-east-2'}
-  environment:
-    OUR_ENV: ${self:provider.stage}
-  vpc:
-    securityGroupIds: { 'Fn::Split': [',', { 'Fn::ImportValue': 'agency-services-transunion-vpc-natsecuritygroup' }] }
-    subnetIds: { 'Fn::Split': [',', { 'Fn::ImportValue': 'agency-services-transunion-subnets-private' }] }
+  stage: dev
+  region: us-east-1
+  # To load environment variables externally
+  # rename env.example to .env and uncomment
+  # the following line. Also, make sure to not
+  # commit your .env.
+  #
+  #environment:
+  #  SAMPLE_ENV_VAR: ${env:SAMPLE_ENV_VAR}
+
+functions:
+  hello:
+    handler: handler.hello
+    events:
+      - http:
+          path: hello
+          method: get
