--- a/initiative-program-services/resources/serverless.yml
+++ b/initiative-program-services/resources/serverless.yml
@@ -1,7 +1,7 @@
 # NOTE: update this with your service name
-service: resources
+service: initiative-program-resources
 
-# Create an optimized package for our functions 
+# Create an optimized package for our functions
 package:
   individually: true
 
@@ -13,20 +13,7 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: dev
-  region: us-east-1
-  # To load environment variables externally
-  # rename env.example to .env and uncomment
-  # the following line. Also, make sure to not
-  # commit your .env.
-  #
-  #environment:
-  #  SAMPLE_ENV_VAR: ${env:SAMPLE_ENV_VAR}
-
-functions:
-  hello:
-    handler: handler.hello
-    events:
-      - http:
-          path: hello
-          method: get
+  stage: ${opt:stage, 'dev'}
+  region: ${opt:region, 'us-east-2'}
+  environment:
+    OUR_ENV: ${self:provider.stage}
