--- a/initiative-program-services/api/package.json
+++ b/initiative-program-services/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "initiative-program-api",
   "version": "0.1.0",
   "description": "A TypeScript starter for Serverless Framework",
   "main": "handler.js",
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
     "@types/jest": "^26.0.14",
-    "serverless-bundle": "^5.3.0",
+    "serverless-bundle": "3.2.1",
     "serverless-dotenv-plugin": "^3.0.0",
     "serverless-offline": "^6.8.0"
   },
