--- a/web-api/web-api-producers/serverless.yml
+++ b/web-api/web-api-producers/serverless.yml
@@ -13,15 +13,10 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: dev
-  region: us-east-1
-  # To load environment variables externally
-  # rename env.example to .env and uncomment
-  # the following line. Also, make sure to not
-  # commit your .env.
-  #
-  #environment:
-  #  SAMPLE_ENV_VAR: ${env:SAMPLE_ENV_VAR}
+  stage: ${opt:stage, 'dev'}
+  region: ${opt:region, 'us-east-2'}
+  environment:
+    OUR_ENV: ${self:provider.stage}
 
 functions:
   hello:
