--- a/initiative-program-services/api/serverless.yml
+++ b/initiative-program-services/api/serverless.yml
@@ -17,3 +17,11 @@ provider:
   region: ${opt:region, 'us-east-2'}
   environment:
     OUR_ENV: ${self:provider.stage}
+
+functions:
+  hello:
+    handler: handler.hello
+    events:
+      - http:
+          path: hello
+          method: get
