API resource only outputs ID
switching back from getatt to ref

--- a/web-api/resources/serverless.yml
+++ b/web-api/resources/serverless.yml
@@ -58,7 +58,7 @@ resources:
         Name: !Sub '${self:service}-apigw-rootresource'
     ApiGatewayRestApiInitiativeResourceId:
       Description: 'Web App API root resource id'
-      Value: !GetAtt InitiativeResource.RootResourceId
+      Value: !Ref InitiativeResource
       Export:
         Name: !Sub '${self:service}-apigw-initiativeresource'
     ApiGatewauAuthorizerId:
