--- a/web-api/producers/serverless.yml
+++ b/web-api/producers/serverless.yml
@@ -37,7 +37,7 @@ functions:
     onError: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:lambdadeadletterqueue'
     events:
       - http:
-          path: /initiatives
+          path: /initiative
           method: post
           cors: true
           authorizer:
@@ -48,7 +48,7 @@ functions:
     onError: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:lambdadeadletterqueue'
     events:
       - http:
-          path: /initiatives
+          path: /initiative
           method: put
           cors: true
           authorizer:
