--- a/web-api/resources/serverless.yml
+++ b/web-api/resources/serverless.yml
@@ -43,7 +43,7 @@ resources:
       Properties:
         RestApiId: !Ref ApiGatewayRestApi
         ParentId: !GetAtt ApiGatewayRestApi.RootResourceId
-        PathPart: 'initiative'
+        PathPart: 'initiatives'
 
   Outputs:
     ApiGatewayRestApiId:
