holding off on event arch

--- a/web-api/producers/serverless.yml
+++ b/web-api/producers/serverless.yml
@@ -34,25 +34,26 @@ provider:
       Resource: '*'
 
 functions:
+  # for future user
   createInitiative:
     handler: src/initiatives/post.main
     onError: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:lambdadeadletterqueue'
-    events:
-      - http:
-          path: /initiatives
-          method: post
-          cors: true
-          authorizer:
-            type: COGNITO_USER_POOLS
-            authorizerId: !ImportValue web-api-resources-apigw-authorizer
+  #   events:
+  #     - http:
+  #         path: /initiatives
+  #         method: post
+  #         cors: true
+  #         authorizer:
+  #           type: COGNITO_USER_POOLS
+  #           authorizerId: !ImportValue web-api-resources-apigw-authorizer
   updateInitiative:
     handler: src/initiatives/put.main
     onError: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:lambdadeadletterqueue'
-    events:
-      - http:
-          path: /initiatives
-          method: put
-          cors: true
-          authorizer:
-            type: COGNITO_USER_POOLS
-            authorizerId: !ImportValue web-api-resources-apigw-authorizer
+  #   events:
+  #     - http:
+  #         path: /initiatives
+  #         method: put
+  #         cors: true
+  #         authorizer:
+  #           type: COGNITO_USER_POOLS
+  #           authorizerId: !ImportValue web-api-resources-apigw-authorizer
