adding dispute re-enrollment method

--- a/graphql-api/serverless.yml
+++ b/graphql-api/serverless.yml
@@ -188,9 +188,16 @@ functions:
     layers:
       - { Ref: TuCertsLambdaLayer }
 
-  # clean up re-enrollemtns fulfills
+  # clean up re-enrollments
   cleanUpReEnrollment:
     handler: src/handlers/transunion/cleanUpReEnrollment.main
+    timeout: 6
+    layers:
+      - { Ref: TuCertsLambdaLayer }
+
+  # clean up re-enrollments
+  cleanUpDisputeReEnrollment:
+    handler: src/handlers/transunion/cleanUpDisputeReEnrollment.main
     timeout: 6
     layers:
       - { Ref: TuCertsLambdaLayer }
